--- a/templates/homepage/admin.html.twig
+++ b/templates/homepage/admin.html.twig
@@ -1,34 +1,44 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin_base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}
+	Hello AdminController!
+{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper {
-        margin: 1em auto;
-        max-width: 800px;
-        width: 95%;
-        font: 18px/1.5 sans-serif;
-    }
+{% block stylesheets2 %}
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
 
-    .example-wrapper code {
-        background: #F5F5F5;
-        padding: 2px 6px;
-    }
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
+{% endblock %}
 
-</style>
+{% block body_title %}
+	Hello
+	{{ controller_name }}! ✅
+{% endblock %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at
-            <code><a href="{{ 'C:/Workspace/skeleton/skeleton/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code>
-        </li>
-        <li>Your template at
-            <code><a href="{{ 'C:/Workspace/skeleton/skeleton/templates/homepage/admin.html.twig'|file_link(0) }}">templates/homepage/admin.html.twig</a></code>
-        </li>
-    </ul>
-</div>
+{% block body_content %}
+	<div class="example-wrapper">
+		This friendly message is coming from:
+		<ul>
+			<li>Your controller at
+				<code>
+					<a href="{{ 'C:/Workspace/skeleton/skeleton/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a>
+				</code>
+			</li>
+			<li>Your template at
+				<code>
+					<a href="{{ 'C:/Workspace/skeleton/skeleton/templates/homepage/admin.html.twig'|file_link(0) }}">templates/homepage/admin.html.twig</a>
+				</code>
+			</li>
+		</ul>
+	</div>
 {% endblock %}
