--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -11,7 +11,7 @@
 			{% include "_front/_navigation.html.twig" %}
 		{% endblock %}
 		{% block body_messages %}
-			{% include "_front/_messages.html.twig" %}
+			{% include "@MazariniMessage/_messages.html.twig" %}
 		{% endblock %}
 		{% block body %}
 			<h1>
