--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
 		{% block stylesheets %}{% endblock %}
+            {{ encore_entry_link_tags('app') }}
 	</head>
 	<body id="body" class="{% block body_class %}body{% endblock %}">
 		{% block body_container %}
@@ -22,5 +23,6 @@
 			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 		{% block javascripts %}{% endblock %}
+            {{ encore_entry_script_tags('app') }}
 	</body>
 </html></head></html>
