--- a/templates/front_base.html.twig
+++ b/templates/front_base.html.twig
@@ -16,7 +16,7 @@
 			{% endblock %}
 		{% endblock %}
 		{% block body_messages %}
-			{% include "_front/_messages.html.twig" %}
+			{% include "@MazariniMessage/_messages.html.twig" %}
 		{% endblock %}
 		{% block body %}
 			<h1>
