--- a/lib/message-bundle/templates/_alert.html.twig
+++ b/lib/message-bundle/templates/_alert.html.twig
@@ -1,4 +1,4 @@
-<div class="alert alert-{{ type|alert_class }} alert-dismissible fade show" role="alert">
+<div class="alert {{ type|alert_class }} alert-dismissible fade show" role="alert">
 	{{ message }}
 	<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
