--- a/lib/message-bundle/templates/_alert.html.twig
+++ b/lib/message-bundle/templates/_alert.html.twig
@@ -1,4 +1,6 @@
-<div class="alert {{ type|alert_class }} alert-dismissible fade show" role="alert">
+<div class="alert {{ type|alert_class }}{% if isClosable() %} alert-dismissible fade show{% endif %}" role="alert">
 	{{ message }}
-	<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	{% if isClosable() %}
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	{% endif %}
 </div>
